LibStereoKit.jl


function mesh_set_bounds(mesh, bounds)
    @ccall StereoKitC.mesh_set_bounds(mesh::mesh_t, bounds::Ptr{bounds_t})::Cvoid
end

function mesh_get_bounds(mesh)
    @ccall StereoKitC.mesh_get_bounds(mesh::mesh_t)::bounds_t
end

function mesh_has_skin(mesh)
    @ccall StereoKitC.mesh_has_skin(mesh::mesh_t)::bool32_t
end

function mesh_set_skin(mesh, bone_ids_4, bone_id_4_count, bone_weights, bone_weight_count, bone_resting_transforms, bone_count)
    @ccall StereoKitC.mesh_set_skin(mesh::mesh_t, bone_ids_4::Ptr{UInt16}, bone_id_4_count::Int32, bone_weights::Ptr{vec4}, bone_weight_count::Int32, bone_resting_transforms::Ptr{matrix}, bone_count::Int32)::Cvoid
end

function mesh_update_skin(mesh, bone_transforms, bone_count)
    @ccall StereoKitC.mesh_update_skin(mesh::mesh_t, bone_transforms::Ptr{matrix}, bone_count::Int32)::Cvoid
end

function mesh_ray_intersect(mesh, model_space_ray, out_pt, out_start_inds)
    @ccall StereoKitC.mesh_ray_intersect(mesh::mesh_t, model_space_ray::ray_t, out_pt::Ptr{ray_t}, out_start_inds::Ptr{UInt32})::bool32_t
end

function mesh_get_triangle(mesh, triangle_index, a, b, c)
    @ccall StereoKitC.mesh_get_triangle(mesh::mesh_t, triangle_index::UInt32, a::Ptr{vert_t}, b::Ptr{vert_t}, c::Ptr{vert_t})::bool32_t
end

function mesh_gen_plane(dimensions, plane_normal, plane_top_direction, subdivisions)
    @ccall StereoKitC.mesh_gen_plane(dimensions::vec2, plane_normal::vec3, plane_top_direction::vec3, subdivisions::Int32)::mesh_t
end

function mesh_gen_cube(dimensions, subdivisions)
    @ccall StereoKitC.mesh_gen_cube(dimensions::vec3, subdivisions::Int32)::mesh_t
end

function mesh_gen_sphere(diameter, subdivisions)
    @ccall StereoKitC.mesh_gen_sphere(diameter::Cfloat, subdivisions::Int32)::mesh_t
end

function mesh_gen_rounded_cube(dimensions, edge_radius, subdivisions)
    @ccall StereoKitC.mesh_gen_rounded_cube(dimensions::vec3, edge_radius::Cfloat, subdivisions::Int32)::mesh_t
end

function mesh_gen_cylinder(diameter, depth, direction, subdivisions)
    @ccall StereoKitC.mesh_gen_cylinder(diameter::Cfloat, depth::Cfloat, direction::vec3, subdivisions::Int32)::mesh_t
end

@cenum tex_type_::UInt32 begin
    tex_type_image_nomips = 1
    tex_type_cubemap = 2
    tex_type_rendertarget = 4
    tex_type_depth = 8
    tex_type_mips = 16
    tex_type_dynamic = 32
    tex_type_image = 17
end

@cenum tex_format_::UInt32 begin
    tex_format_none = 0
    tex_format_rgba32 = 1
    tex_format_rgba32_linear = 2
    tex_format_bgra32 = 3
    tex_format_bgra32_linear = 4
    tex_format_rg11b10 = 5
    tex_format_rgb10a2 = 6
    tex_format_rgba64 = 7
    tex_format_rgba64s = 8
    tex_format_rgba64f = 9
    tex_format_rgba128 = 10
    tex_format_r8 = 11
    tex_format_r16 = 12
    tex_format_r32 = 13
    tex_format_depthstencil = 14
    tex_format_depth32 = 15
    tex_format_depth16 = 16
    tex_format_rgba64u = 7
end

@cenum tex_sample_::UInt32 begin
    tex_sample_linear = 0
    tex_sample_point = 1
    tex_sample_anisotropic = 2
end

@cenum tex_address_::UInt32 begin
    tex_address_wrap = 0
    tex_address_clamp = 1
    tex_address_mirror = 2
end

function tex_find(id)
    @ccall StereoKitC.tex_find(id::Ptr{Cchar})::tex_t
end

function tex_create(type, format)
    @ccall StereoKitC.tex_create(type::tex_type_, format::tex_format_)::tex_t
end

function tex_create_color32(data, width, height, srgb_data)
    @ccall StereoKitC.tex_create_color32(data::Ptr{color32}, width::Int32, height::Int32, srgb_data::bool32_t)::tex_t
end

function tex_create_color128(data, width, height, srgb_data)
    @ccall StereoKitC.tex_create_color128(data::Ptr{color128}, width::Int32, height::Int32, srgb_data::bool32_t)::tex_t
end

function tex_create_mem(file_data, file_size, srgb_data, priority)
    @ccall StereoKitC.tex_create_mem(file_data::Ptr{Cvoid}, file_size::Csize_t, srgb_data::bool32_t, priority::Int32)::tex_t
end

function tex_create_file(file, srgb_data, priority)
    @ccall StereoKitC.tex_create_file(file::Ptr{Cchar}, srgb_data::bool32_t, priority::Int32)::tex_t
end

function tex_create_file_arr(files, file_count, srgb_data, priority)
    @ccall StereoKitC.tex_create_file_arr(files::Ptr{Ptr{Cchar}}, file_count::Int32, srgb_data::bool32_t, priority::Int32)::tex_t
end

function tex_create_cubemap_file(equirectangular_file, srgb_data, out_sh_lighting_info, priority)
    @ccall StereoKitC.tex_create_cubemap_file(equirectangular_file::Ptr{Cchar}, srgb_data::bool32_t, out_sh_lighting_info::Ptr{spherical_harmonics_t}, priority::Int32)::tex_t
end

function tex_create_cubemap_files(cube_face_file_xxyyzz, srgb_data, out_sh_lighting_info, priority)
    @ccall StereoKitC.tex_create_cubemap_files(cube_face_file_xxyyzz::Ptr{Ptr{Cchar}}, srgb_data::bool32_t, out_sh_lighting_info::Ptr{spherical_harmonics_t}, priority::Int32)::tex_t
end

function tex_set_id(texture, id)
    @ccall StereoKitC.tex_set_id(texture::tex_t, id::Ptr{Cchar})::Cvoid
end

function tex_set_fallback(texture, fallback)
    @ccall StereoKitC.tex_set_fallback(texture::tex_t, fallback::tex_t)::Cvoid
end

function tex_set_surface(texture, native_surface, type, native_fmt, width, height, surface_count)
    @ccall StereoKitC.tex_set_surface(texture::tex_t, native_surface::Ptr{Cvoid}, type::tex_type_, native_fmt::Int64, width::Int32, height::Int32, surface_count::Int32)::Cvoid
end

function tex_addref(texture)
    @ccall StereoKitC.tex_addref(texture::tex_t)::Cvoid
end

function tex_release(texture)
    @ccall StereoKitC.tex_release(texture::tex_t)::Cvoid
end

function tex_asset_state(texture)
    @ccall StereoKitC.tex_asset_state(texture::tex_t)::asset_state_
end

function tex_on_load(texture, on_load, context)
    @ccall StereoKitC.tex_on_load(texture::tex_t, on_load::Ptr{Cvoid}, context::Ptr{Cvoid})::Cvoid
end

function tex_on_load_remove(texture, on_load)
    @ccall StereoKitC.tex_on_load_remove(texture::tex_t, on_load::Ptr{Cvoid})::Cvoid
end

function tex_set_colors(texture, width, height, data)
    @ccall StereoKitC.tex_set_colors(texture::tex_t, width::Int32, height::Int32, data::Ptr{Cvoid})::Cvoid
end

function tex_set_color_arr(texture, width, height, data, data_count, out_sh_lighting_info, multisample)
    @ccall StereoKitC.tex_set_color_arr(texture::tex_t, width::Int32, height::Int32, data::Ptr{Ptr{Cvoid}}, data_count::Int32, out_sh_lighting_info::Ptr{spherical_harmonics_t}, multisample::Int32)::Cvoid
end

function tex_add_zbuffer(texture, format)
    @ccall StereoKitC.tex_add_zbuffer(texture::tex_t, format::tex_format_)::tex_t
end

function tex_get_data(texture, out_data, out_data_size)
    @ccall StereoKitC.tex_get_data(texture::tex_t, out_data::Ptr{Cvoid}, out_data_size::Csize_t)::Cvoid
end

function tex_gen_color(color, width, height, type, format)
    @ccall StereoKitC.tex_gen_color(color::color128, width::Int32, height::Int32, type::tex_type_, format::tex_format_)::tex_t
end

function tex_gen_cubemap(gradient, gradient_dir, resolution, out_sh_lighting_info)
    @ccall StereoKitC.tex_gen_cubemap(gradient::gradient_t, gradient_dir::vec3, resolution::Int32, out_sh_lighting_info::Ptr{spherical_harmonics_t})::tex_t
end

function tex_gen_cubemap_sh(lookup, face_size, light_spot_size_pct, light_spot_intensity)
    @ccall StereoKitC.tex_gen_cubemap_sh(lookup::Ptr{spherical_harmonics_t}, face_size::Int32, light_spot_size_pct::Cfloat, light_spot_intensity::Cfloat)::tex_t
end

function tex_get_format(texture)
    @ccall StereoKitC.tex_get_format(texture::tex_t)::tex_format_
end

function tex_get_width(texture)
    @ccall StereoKitC.tex_get_width(texture::tex_t)::Int32
end

function tex_get_height(texture)
    @ccall StereoKitC.tex_get_height(texture::tex_t)::Int32
end

function tex_set_sample(texture, sample)
    @ccall StereoKitC.tex_set_sample(texture::tex_t, sample::tex_sample_)::Cvoid
end

function tex_get_sample(texture)
    @ccall StereoKitC.tex_get_sample(texture::tex_t)::tex_sample_
end

function tex_set_address(texture, address_mode)
    @ccall StereoKitC.tex_set_address(texture::tex_t, address_mode::tex_address_)::Cvoid
end

function tex_get_address(texture)
    @ccall StereoKitC.tex_get_address(texture::tex_t)::tex_address_
end

function tex_set_anisotropy(texture, anisotropy_level)
    @ccall StereoKitC.tex_set_anisotropy(texture::tex_t, anisotropy_level::Int32)::Cvoid
end

function tex_get_anisotropy(texture)
    @ccall StereoKitC.tex_get_anisotropy(texture::tex_t)::Int32
end

function tex_set_loading_fallback(loading_texture)
    @ccall StereoKitC.tex_set_loading_fallback(loading_texture::tex_t)::Cvoid
end

function tex_set_error_fallback(error_texture)
    @ccall StereoKitC.tex_set_error_fallback(error_texture::tex_t)::Cvoid
end

function tex_get_cubemap_lighting(cubemap_texture)
    @ccall StereoKitC.tex_get_cubemap_lighting(cubemap_texture::tex_t)::spherical_harmonics_t
end

function font_find(id)
    @ccall StereoKitC.font_find(id::Ptr{Cchar})::font_t
end

function font_create(file)
    @ccall StereoKitC.font_create(file::Ptr{Cchar})::font_t
end

function font_create_files(files, file_count)
    @ccall StereoKitC.font_create_files(files::Ptr{Ptr{Cchar}}, file_count::Int32)::font_t
end

function font_set_id(font, id)
    @ccall StereoKitC.font_set_id(font::font_t, id::Ptr{Cchar})::Cvoid
end

function font_addref(font)
    @ccall StereoKitC.font_addref(font::font_t)::Cvoid
end

function font_release(font)
    @ccall StereoKitC.font_release(font::font_t)::Cvoid
end

function font_get_tex(font)
    @ccall StereoKitC.font_get_tex(font::font_t)::tex_t
end

function shader_find(id)
    @ccall StereoKitC.shader_find(id::Ptr{Cchar})::shader_t
end

function shader_create_file(filename)
    @ccall StereoKitC.shader_create_file(filename::Ptr{Cchar})::shader_t
end

function shader_create_mem(data, data_size)
    @ccall StereoKitC.shader_create_mem(data::Ptr{Cvoid}, data_size::Csize_t)::shader_t
end

function shader_set_id(shader, id)
    @ccall StereoKitC.shader_set_id(shader::shader_t, id::Ptr{Cchar})::Cvoid
end

function shader_get_name(shader)
    @ccall StereoKitC.shader_get_name(shader::shader_t)::Ptr{Cchar}
end

function shader_addref(shader)
    @ccall StereoKitC.shader_addref(shader::shader_t)::Cvoid
end

function shader_release(shader)
    @ccall StereoKitC.shader_release(shader::shader_t)::Cvoid
end

@cenum transparency_::UInt32 begin
    transparency_none = 1
    transparency_blend = 2
    transparency_add = 3
end

@cenum cull_::UInt32 begin
    cull_back = 0
    cull_front = 1
    cull_none = 2
end

@cenum depth_test_::UInt32 begin
    depth_test_less = 0
    depth_test_less_or_eq = 1
    depth_test_greater = 2
    depth_test_greater_or_eq = 3
    depth_test_equal = 4
    depth_test_not_equal = 5
    depth_test_always = 6
    depth_test_never = 7
end

@cenum material_param_::UInt32 begin
    material_param_unknown = 0
    material_param_float = 1
    material_param_color128 = 2
    material_param_vector2 = 3
    material_param_vector3 = 4
    material_param_vector4 = 5
    material_param_vector = 5
    material_param_matrix = 6
    material_param_texture = 7
    material_param_int = 8
    material_param_int2 = 9
    material_param_int3 = 10
    material_param_int4 = 11
    material_param_uint = 12
    material_param_uint2 = 13
    material_param_uint3 = 14
    material_param_uint4 = 15
end

function material_find(id)
    @ccall StereoKitC.material_find(id::Ptr{Cchar})::material_t
end

function material_create(shader)
    @ccall StereoKitC.material_create(shader::shader_t)::material_t
end

function material_copy(material)
    @ccall StereoKitC.material_copy(material::material_t)::material_t
end

function material_copy_id(id)
    @ccall StereoKitC.material_copy_id(id::Ptr{Cchar})::material_t
end

function material_set_id(material, id)
    @ccall StereoKitC.material_set_id(material::material_t, id::Ptr{Cchar})::Cvoid
end

function material_addref(material)
    @ccall StereoKitC.material_addref(material::material_t)::Cvoid
end
